# ucr-aiml-multiomics

./: README.md  main.py  pyproject.toml
data/: README.md
notebooks/: GTExdata_whole_blood_Jason.py  README.md  gtex_whole_blood.ipynb  ridge_regression.ipynb
notebooks/whole_blood_hpcc_demo/: gtex_whole_blood_age.ipynb  papermill.sh
r_scripts/: README.md
r_scripts/data_preprocessing(whole_blood_tissue)/: aiml_randomforest.Rmd  data_preprocessing.Rmd
src/: README.md
